fixed bugs in team2 services